--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "wheel",
   "version": "1.0.0",
-  "description": "Benvenuti nella **ruota della classe 3D**, questa ruota è uno strumento utile e rapido per estrarre gli alunni da interrogare. Vediamo insieme come funziona e come personalizzarla.",
+  "description": "Benvenuti nella **ruota della classe 4D**, questa ruota è uno strumento utile e rapido per estrarre gli alunni da interrogare. Vediamo insieme come funziona e come personalizzarla.",
   "main": "funcionalities.js",
   "scripts": {
-  "test": "echo \"Error: no test specified\" && exit 1",
-  "dev": "node funcionalities.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "live-server"
+  },
+  "devDependencies": {
+    "live-server": "^1.2.2"
   },
   "repository": {
     "type": "git",
